# ytmp3-dl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ytmp3-dl.cpp
.github/workflows/: cmake.yml
include/alib/: alib.hpp
include/ytmp3-dl/: downloader.hpp  utility.hpp  version.hpp
src/: downloader.cpp  jsoncpp.cpp  utility.cpp
